vm_exec.c
@@ -13,7 +13,7 @@
 
 #if USE_YJIT || USE_RJIT
 // The number of instructions executed on vm_exec_core. --yjit-stats uses this.
-uint64_t rb_vm_insns_count = 0;
+RB_THREAD_LOCAL_SPECIFIER uint64_t rb_vm_insns_count = 0;
 #endif
 
 #if VM_COLLECT_USAGE_DETAILS
